# ciw-project-2023

./: .gitignore  .gitignore.io  LICENSE  README.md  aligner.py  mcs.py  pubchem.py  pyproject.toml  test_pubchem.py  testdata-notes.typ  testdata.ipynb  utils.py
.github/workflows/: hello-world.yml
