[tool.poetry]
name = "ciw-project-2023"
version = "0.1.0"
description = ""
authors = []
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rdkit = "^2023.3.3"
jupyter = "^1.0.0"
matplotlib = "^3.8.0"
ipyplot = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
